@@ -60,6 +60,7 @@ public class MaidTickHandler {
             .ifPresent(state -> handleMaidTick(maid, state));
     }
     
+    @SuppressWarnings("MathClampMigration")
     private static void handleMaidTick(EntityMaid maid, ISlashBladeState state) {
         boolean hasTruePower = SlashBladeMaidBauble.TruePower.checkBauble(maid);
         boolean hasUnlimitedBladeWorks = SlashBladeMaidBauble.UnlimitedBladeWorks.checkBauble(maid);
@@ -71,13 +72,13 @@ public class MaidTickHandler {
         
         IConcentrationRank rank = maid.getData(CapabilityConcentrationRank.RANK_POINT);
         if (hasTruePower) {
-            long rankPoint = Math.clamp(rank.getRankPoint(maid.level().getGameTime()), data.getLong(TRUE_POWER_RANK), rank.getMaxCapacity());
+            long rankPoint = Math.min(Math.max(rank.getRankPoint(maid.level().getGameTime()), data.getLong(TRUE_POWER_RANK)), rank.getMaxCapacity());
             rank.setRawRankPoint(rankPoint);
             rank.setLastUpdte(maid.level().getGameTime());
             data.putLong(TRUE_POWER_RANK, rankPoint);
         }
         if (hasUnlimitedBladeWorks) {
-            long rankPoint = Math.clamp(rank.getRankPoint(maid.level().getGameTime()), 5 * rank.getUnitCapacity() + 3, rank.getMaxCapacity());
+            long rankPoint = Math.min(Math.max(rank.getRankPoint(maid.level().getGameTime()), 5 * rank.getUnitCapacity() + 3), rank.getMaxCapacity());
             rank.setRawRankPoint(rankPoint);
             rank.setLastUpdte(maid.level().getGameTime());
         }
